test/libsolidity/syntaxTests/nameAndTypeResolution/226_inheriting_library.sol
contract Test {}
library Lib is Test {}
// ----
// TypeError: (17-39): Library is not allowed to inherit.
